# statusbar

./: .gitignore  LICENCE  README.md  statusbar.cabal  statusbar.hs  test
