cabal-version:       2.0

name:                statusbar
version:             0.1.0.0
license-file:        LICENCE
author:              Colm Baston
maintainer:          colm@colmbaston.uk
build-type:          Simple
extra-source-files:  README.md

executable statusbar
  main-is:             statusbar.hs
  default-language:    GHC2021
  ghc-options:         -Wall -threaded
  build-depends:       base       ^>= 4.16,
                       time       ^>= 1.12,
                       containers ^>= 0.6,
                       array      ^>= 0.5,
                       directory  ^>= 1.3,
                       process    ^>= 1.6,
                       text       ^>= 2.0,
                       attoparsec ^>= 0.14
